<resources>
    <string name="app_name">BabySit</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="already_got_account">Already got Account?</string>
    <string name="welcome_user">Welcome User</string>
    <string name="register">Register</string>
    <string name="or_sign_in_with">or sign in with</string>
    <string name="login">LOGIN</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_friends">Friends</string>
    <string name="title_profile">Profile</string>
    <string name="title_explore">Explore</string>
    <string name="title_chat">Chat</string>
    <string name="phone">Phone</string>
    <string name="accept">Accept</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="platform">Platform:</string>
    <string name="taimoor_sikander">Taimoor Sikander</string>
</resources>